# CourtRankRL

./: .gitignore  README.md  agents.md  environment.yml  project_summary.md  pyproject.toml  pyrightconfig.json  test_chunks.jsonl  test_qwen.py
configs/: config.py
notebooks/: EDA_birosagi_embeddingek.ipynb  GRPO_eval.ipynb  README_RunPod_5090.md  RunPod_Full_Pipeline.py  RunPod_Setup_Guide.md  baseline_evaluation.ipynb  chunk_data_analysis.ipynb  courtrankrl_evaluation_summary.ipynb  data_analysis.ipynb  document_metadata_analysis.ipynb  eda_birosagi_hatarozatok.ipynb  eda_megtisztitott_adatok.ipynb  faiss_embedding_analysis.ipynb  faiss_index_builder.ipynb  gemma_embedding_runpod.ipynb  grpo_evaluation.ipynb  grpo_train_runpod.ipynb  model_comparison.ipynb  qwen_embedding_runpod.ipynb  retrieval_evaluation.ipynb  runpod_query_training.py  setup_runpod.sh
scripts/: ai_annotation.py  hybrid_retrieval.py  prepare_grpo_slates.py  qrels_generation.py  test_hybrid_retrieval.py  validate_qrels.py
src/: cli.py  reward_metrics.py
src/data_loader/: build_bm25_index.py  export_training_slates.py  preprocess_documents.py
src/embedding/: create_embeddings_gemini_api.py  create_embeddings_qwen.py
src/search/: __init__.py  grpo_reranker.py  hybrid_search.py  semantic_search.py
