[project]
name = "courtrankrl"
version = "0.1.0"
description = "CourtRankRL - Magyar bírósági határozatok retrieval rendszer"
authors = [{name = "Zelenyiánszki Máté"}]
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core dependencies
    "numpy",
    "pandas",
    "tqdm",
    "torch",
    # Retrieval & indexing
    "faiss-cpu",
    "bm25s",
    "scikit-learn",
    # Hugging Face ecosystem
    "transformers",
    "accelerate",
    "huggingface_hub",
    "sentence-transformers",
    # Document processing
    "docling",
    "docling-core",
    # RL training (cloud-only, de lokálisan is kell az import-okhoz)
    "trl",
    "peft",
    # Utilities
    "python-dotenv",
    # Data visualization (data_analysis.ipynb)
    "matplotlib",
    "seaborn",
    "ranx>=0.3.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "ipykernel",
]

[project.scripts]
courtrankrl = "src.cli:main"

